; ModuleID = '/home/carl/AnghaBench/curl/lib/extr_md4.c_Curl_md4it.c'
source_filename = "/home/carl/AnghaBench/curl/lib/extr_md4.c_Curl_md4it.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Curl_md4it(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = call i32 @MD4_Init(i32* %7)
  %9 = load i8*, i8** %5, align 8
  %10 = load i64, i64* %6, align 8
  %11 = call i32 @curlx_uztoui(i64 %10)
  %12 = call i32 @MD4_Update(i32* %7, i8* %9, i32 %11)
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @MD4_Final(i8* %13, i32* %7)
  ret void
}

declare dso_local i32 @MD4_Init(i32*) #1

declare dso_local i32 @MD4_Update(i32*, i8*, i32) #1

declare dso_local i32 @curlx_uztoui(i64) #1

declare dso_local i32 @MD4_Final(i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
